# device_inductance

./: .gitignore  .readthedocs.yml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: actions.yml  publish.yml
device_inductance/: __init__.py  circuits.py  coils.py  contour.py  device.py  mesh.py  model_reduction.py  mutuals.py  sensors.py  structures.py  tables.py  utils.py
docs/: index.md
docs/api/: components.md  contour.md  device.md  model_reduction.md  utils.md
examples/: full_workflow.py
test/: __init__.py  test_circuits.py  test_contour.py  test_doctest.py  test_examples.py  test_inductances.py  test_misc.py  test_model_reduction.py  test_sensors.py  test_tables.py
