[tool.poetry]
name = "device_inductance"
version = "1.7.3"
description = "Tokamak core inductance matrices and flux tables"
authors = ["Commonwealth Fusion Systems <jlogan@cfs.energy>"]
license = "MIT OR Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache-2.0 License",
]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^2"
omas = ">=0.94.0"
#omas = { path = "../omas" }
gmsh = "^4.13.1"
shapely = "^2.0.2"
scipy = "^1.12"
interpn = "^0.2.3"
cfsem = "^2.1.0"

[tool.poetry.group.dev.dependencies]
# Tests
pytest = "8.3.3"
coverage = "7.6.1"
ruff = "0.6.9"
pyright = "1.1.354"  # Pin to avoid spurious errors
mktestdocs = "0.2.3"
# Docs
mkdocs = ">=1.6.0"
mkdocs-material = ">=9.5.25"
mkdocstrings = { version = ">=0.25.1", extras = ["python"] }
# Examples
matplotlib = "^3.9.1"

[build-system]
requires = ["poetry>=1.6.1"]
build-backend = "poetry.masonry.api"

[tool.ruff]
target-version = "py311"

[tool.coverage.report]
fail_under = 94